# nonebot-plugin-multi-source-daily

./: .gitignore  LICENSE  README.md  pyproject.toml
assets/: history_data.json
nonebot_plugin_multi_source_daily/: __init__.py  config.py  exceptions.py  models.py
nonebot_plugin_multi_source_daily/api/: __init__.py  adapter.py  handlers.py  manager.py  parsers.py
nonebot_plugin_multi_source_daily/api/handlers/: __init__.py  base_handler.py  ithome_handler.py  zhihu_handler.py
nonebot_plugin_multi_source_daily/api/sources/: __init__.py  base.py  history.py  ithome.py  mixins.py  moyu.py  sixty_seconds.py  weibo.py  zhihu.py
nonebot_plugin_multi_source_daily/commands/: __init__.py  api.py  base.py  cache.py  news_detail.py  schedule.py
nonebot_plugin_multi_source_daily/templates/: custom_markdown.css  history.html  ithome.html  news_template.html  sixty_seconds.html  weibo_hot.html  zhihu.html  zhihu_hot.html
nonebot_plugin_multi_source_daily/utils/: __init__.py  cache.py  core.py  helpers.py  scheduler.py  screenshot.py  storage.py  weibo.py
